Fixed contact position from covering header

--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,6 @@ p {
     border-top-left-radius: 100px;
     background-size: contain;
     background-position: center;
-    position: relative;
   }
 
   #about-contact-container {
